# code_exec

./: 1_final_evaluation.json  agentic.ipynb  agentic2.ipynb  alt_text_issues_report.txt  app.py  demo_notebook.ipynb  demo_tests.ipynb  environment.yml  final_evaluation.json  final_evaluation2.json  final_evaluation3.json  main.py  main_best copy 2.ipynb  main_best copy 3.ipynb  main_best.ipynb  maingraph.ipynb  missing_alt_report.txt  models.py  multifinal_evaluation.json  new_tests.ipynb  nodepsfinal_evaluation.json  non-agentic.ipynb  out.json  readme.ipynb  readme.md  requirements.txt  serches_final_evaluation.json  test.ipynb  test2.ipynb  test3.ipynb  test_multiple.py  tests.ipynb  try.py
Agents/: __init__.py  agents.py  config.py  schemas.py  tools.py  utils.py
CodeRunner/: Dockerfile  main.py  pyproject.toml
Data/: 1.ipynb  algorithm_problems_using_python__188__06-03-2024_15-46-55_1.ipynb  algorithm_problems_using_python__191__06_03_2024_15_46_55_1.ipynb  machine_learning__answer_ML_research_questions__9__24_03_2024_08_57_45_10.ipynb  one_sample.ipynb  python_basics_&_scripting__write_code_in_python__22__24_03_2024_08_57_45_10.ipynb  temp.md  test_write.ipynb
Models/: models.py  models_copy.py  schemas.py  testcaseGraph.py  tests.py
Playground/: empty_data.csv  models.py  settings.py  test_empty_salesdata.sql  test_script.py  tests.py
SuccesfulTests/: agentic copy.ipynb
experimental/: agentic copy 2.ipynb  agentic copy 3.ipynb  agentic copy.ipynb  agentic.ipynb  agents_with llama.ipynb  code_check.py  codia.ipynb  main_best copy 4.ipynb  test.ipynb  (+2 more)
(+28 files in other folders)
